<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UserDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/avatarImg"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16sp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="16sp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/lastNameTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImg" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16sp"
        android:layout_marginStart="16sp"
        android:text="@string/last_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameTextView"
        app:layout_constraintTop_toBottomOf="@id/avatarImg" />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="8sp"
        android:layout_marginStart="16sp"
        android:text="@string/_7_000_000_00_00"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="8sp"
        android:layout_marginStart="16sp"
        android:text="@string/name_domain_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTextView" />

    <TextView
        android:id="@+id/dateBirthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:layout_marginStart="16sp"
        android:text="@string/_01_01_0001"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="16sp"
        android:text="@string/country"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/cityTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateBirthTextView" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:text="@string/city"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/countryTextView"
        app:layout_constraintTop_toBottomOf="@id/dateBirthTextView" />

    <ScrollView
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginVertical="16sp"
        android:layout_marginHorizontal="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryTextView">
        <TextView
            android:id="@+id/aboutHimselfTextView"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:text="@string/himself_information"
            android:textSize="16sp"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>